Update title and heading text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>hihi</title>
   <style>
     body {
       display: flex;
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <h1>Hello, world! 👋</h1>
+  <h1>Bantot mo</h1>
 </body>
 </html>
