--- a/index.html
+++ b/index.html
@@ -2,91 +2,155 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Uplifted Vibes ✨</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Power-Up Messages ⚡</title>
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #a18cd1, #fbc2eb);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       height: 100vh;
+      background: radial-gradient(circle at top left, #ff00cc, #3333ff);
+      font-family: 'Orbitron', sans-serif;
       overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      position: relative;
+    }
+
+    .floating-blobs {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    .blob {
+      position: absolute;
+      border-radius: 50%;
+      opacity: 0.4;
+      animation: float 20s infinite;
+    }
+
+    .blob:nth-child(1) {
+      width: 400px;
+      height: 400px;
+      background: #ff00cc;
+      top: 20%;
+      left: 10%;
+    }
+
+    .blob:nth-child(2) {
+      width: 300px;
+      height: 300px;
+      background: #00ffff;
+      bottom: 15%;
+      right: 15%;
+      animation-delay: 5s;
+    }
+
+    @keyframes float {
+      0%, 100% {
+        transform: translateY(0px) rotate(0deg);
+      }
+      50% {
+        transform: translateY(-50px) rotate(180deg);
+      }
     }
 
     .card {
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      z-index: 1;
+      padding: 40px;
+      background: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(20px);
       border-radius: 20px;
-      padding: 40px 30px;
       text-align: center;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-      color: #fff;
-      max-width: 90%;
-      width: 400px;
-      transition: all 0.3s ease-in-out;
+      box-shadow: 0 0 30px rgba(255, 0, 255, 0.3);
+      animation: zoomIn 0.6s ease-out;
+    }
+
+    @keyframes zoomIn {
+      from {
+        transform: scale(0.8);
+        opacity: 0;
+      }
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
     }
 
     h1 {
       font-size: 1.8rem;
-      margin-bottom: 20px;
-      animation: fadeIn 0.6s ease-in-out;
+      margin-bottom: 30px;
+      line-height: 1.4;
+      animation: flicker 2s infinite alternate;
+    }
+
+    @keyframes flicker {
+      0% { opacity: 0.85; }
+      50% { opacity: 1; text-shadow: 0 0 10px #fff, 0 0 20px #0ff; }
+      100% { opacity: 0.85; }
     }
 
     button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 30px;
-      background-color: #ffffff;
-      color: #6a1b9a;
+      padding: 14px 30px;
+      font-size: 1.1rem;
       font-weight: bold;
+      color: #fff;
+      background: linear-gradient(135deg, #00f0ff, #ff00cc);
+      border: none;
+      border-radius: 40px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: transform 0.2s ease, box-shadow 0.3s;
+      box-shadow: 0 0 10px #00ffff, 0 0 20px #ff00cc;
     }
 
     button:hover {
-      background-color: #e0d0f7;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #fff, 0 0 30px #0ff;
     }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="floating-blobs">
+    <div class="blob"></div>
+    <div class="blob"></div>
+  </div>
+
   <div class="card">
-    <h1 id="message">You’re doing amazing things. Keep going! 🚀</h1>
-    <button onclick="changeMessage()">Inspire Me ✨</button>
+    <h1 id="message">You are a powerhouse of potential. Unleash it! ⚡</h1>
+    <button onclick="changeMessage()">Power Me Up 🔥</button>
   </div>
 
   <script>
     const messages = [
-      "You’re doing amazing things. Keep going! 🚀",
-      "Believe in yourself — you’ve got this! 💪",
-      "Every step you take matters. 🌱",
-      "You’re capable of more than you know. 🌟",
-      "Breathe. Smile. Shine. 🌞",
-      "The best is yet to come. Stay ready. 🔥",
-      "Progress, not perfection. Keep moving! 🛤️",
-      "You're a light in the world — shine bright! 💡",
-      "Small efforts today create big results tomorrow. ⏳"
+      "You are a powerhouse of potential. Unleash it! ⚡",
+      "Fuel your fire. The world needs your light! 🔥",
+      "Greatness is in motion. You’re the spark. ✨",
+      "Leap boldly. You were born to fly. 🛫",
+      "Energy. Focus. Victory. You got this. 🧠💥",
+      "Let the challenge ignite your passion. 🔥⚔️",
+      "You're electric — never stop charging forward! ⚡🔋"
     ];
 
     function changeMessage() {
       const msg = document.getElementById("message");
-      let newMessage = msg.innerText;
-      while (newMessage === msg.innerText) {
-        newMessage = messages[Math.floor(Math.random() * messages.length)];
+      let newMsg = msg.innerText;
+      while (newMsg === msg.innerText) {
+        newMsg = messages[Math.floor(Math.random() * messages.length)];
       }
-      msg.innerText = newMessage;
       msg.style.animation = 'none';
-      void msg.offsetWidth; // trigger reflow
-      msg.style.animation = 'fadeIn 0.6s ease-in-out';
+      msg.offsetHeight; // Trigger reflow
+      msg.innerText = newMsg;
+      msg.style.animation = 'flicker 2s infinite alternate';
     }
   </script>
 </body>
