Update index.html with new title, enhanced styling, and interactive envelope feature for improved user engagement

--- a/index.html
+++ b/index.html
@@ -3,59 +3,88 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Echo Zone</title>
+  <title>Encrypted Envelope</title>
   <style>
     body {
       margin: 0;
-      background: #0d0d0d;
-      color: #00ffe7;
-      font-family: 'Courier New', Courier, monospace;
-      overflow: hidden;
+      background: #0b0c10;
       height: 100vh;
+      overflow: hidden;
       display: flex;
-      align-items: center;
       justify-content: center;
-      flex-direction: column;
+      align-items: center;
+      font-family: 'Courier New', monospace;
+      color: #00fff7;
+    }
+
+    .envelope-wrapper {
       position: relative;
+      width: 220px;
+      height: 140px;
+      perspective: 1000px;
+      cursor: pointer;
+      z-index: 2;
     }
 
-    .rings {
-      position: absolute;
-      width: 300px;
-      height: 300px;
-      border-radius: 50%;
-      border: 1px solid #00ffe7;
-      opacity: 0.05;
-      animation: pulse 4s infinite ease-out;
-    }
-
-    .rings::before,
-    .rings::after {
-      content: '';
-      position: absolute;
-      border: 1px solid #00ffe7;
-      border-radius: 50%;
-      opacity: 0.08;
-    }
-
-    .rings::before {
+    .envelope {
       width: 100%;
       height: 100%;
-      animation: pulse 6s infinite ease-out;
+      position: relative;
+      background: #1f2833;
+      border: 2px solid #00fff7;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 0 15px rgba(0,255,247,0.3);
+      transition: box-shadow 0.3s ease;
     }
 
-    .rings::after {
-      width: 150%;
-      height: 150%;
-      top: -25%;
-      left: -25%;
-      animation: pulse 8s infinite ease-out;
+    .flap {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 50%;
+      background: #45a29e;
+      transform-origin: top;
+      transform: rotateX(0deg);
+      transition: transform 1s ease-in-out;
+      z-index: 3;
     }
 
-    @keyframes pulse {
+    .envelope.open .flap {
+      transform: rotateX(-140deg);
+    }
+
+    .message {
+      position: absolute;
+      top: 55%;
+      width: 100%;
+      padding: 20px;
+      text-align: center;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 0.6s ease, transform 0.6s ease;
+    }
+
+    .envelope.open .message {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .ripple {
+      position: absolute;
+      width: 400px;
+      height: 400px;
+      border-radius: 50%;
+      background: radial-gradient(circle, rgba(0,255,247,0.1), transparent);
+      animation: ripple 4s infinite ease-out;
+      z-index: 0;
+    }
+
+    @keyframes ripple {
       0% {
         transform: scale(0.8);
-        opacity: 0.1;
+        opacity: 0.2;
       }
       100% {
         transform: scale(2);
@@ -63,74 +92,57 @@
       }
     }
 
-    h1 {
-      font-size: 1.5rem;
-      text-align: center;
-      max-width: 90%;
-      line-height: 1.4;
-      z-index: 2;
-      animation: fadeIn 1s ease;
-    }
-
-    button {
-      margin-top: 30px;
-      background: transparent;
-      border: 2px solid #00ffe7;
-      color: #00ffe7;
-      padding: 10px 24px;
-      font-family: inherit;
-      font-size: 1rem;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      z-index: 2;
-    }
-
-    button:hover {
-      background: #00ffe7;
-      color: #0d0d0d;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(10px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    .background-ripple {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <div class="rings"></div>
 
-  <h1 id="message">Message received: “Keep moving — the signal grows stronger.”</h1>
-  <button onclick="changeMessage()">New Transmission ▷</button>
+<div class="background-ripple">
+  <div class="ripple" style="top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+</div>
 
-  <script>
-    const messages = [
-      "Message received: “Keep moving — the signal grows stronger.”",
-      "Transmission: “You are exactly where you're meant to be.”",
-      "Incoming: “Your energy shapes the timeline.”",
-      "Uplink active: “Create. Evolve. Echo.”",
-      "Code decoded: “You are the cause of the ripple.”",
-      "Signal lock: “Bravery isn’t loud — it’s steady.”"
-    ];
+<div class="envelope-wrapper" onclick="openEnvelope()">
+  <div class="envelope" id="envelope">
+    <div class="flap"></div>
+    <div class="message" id="message">
+      Transmission received: <br><strong>“You are the anomaly. Proceed.”</strong>
+    </div>
+  </div>
+</div>
 
-    function changeMessage() {
-      const msg = document.getElementById("message");
-      let newMsg = msg.innerText;
-      while (newMsg === msg.innerText) {
-        newMsg = messages[Math.floor(Math.random() * messages.length)];
-      }
-      msg.style.opacity = 0;
-      setTimeout(() => {
-        msg.innerText = newMsg;
-        msg.style.opacity = 1;
-      }, 300);
-    }
-  </script>
+<script>
+  const messages = [
+    "Transmission received: “You are the anomaly. Proceed.”",
+    "Decryption complete: “You’re built for impact.”",
+    "Signal unlocked: “Lead the shift.”",
+    "Uplink confirmed: “This is your moment.”",
+    "Alert: “Hope isn’t random. You create it.”"
+  ];
+
+  let opened = false;
+
+  function openEnvelope() {
+    if (opened) return;
+
+    const envelope = document.getElementById('envelope');
+    const message = document.getElementById('message');
+
+    const newMessage = messages[Math.floor(Math.random() * messages.length)];
+    message.innerHTML = newMessage;
+
+    envelope.classList.add('open');
+    opened = true;
+
+    setTimeout(() => {
+      // allow re-opening if you want it to reset
+      // opened = false;
+    }, 2000);
+  }
+</script>
 </body>
 </html>
